--- a/templates/article/sidebar.html
+++ b/templates/article/sidebar.html
@@ -21,7 +21,7 @@
         <div class="blog_recent_post">
             <h2> جدیدترین مقالات</h2>
             <div class="multi_line"></div>
-            {% for article in articles %}
+            {% for article in recent %}
                 <div class="single_recent_post">
                     <div class="log_li_img">
                         <img src="#" alt="" />
