--- a/templates/article/nav.html
+++ b/templates/article/nav.html
@@ -1,48 +1,8 @@
 {% load static %}
 <section class="nav_area">
 	<div class="container">
-	<div class="nav_left floatleft">
-		<a href="category-1.html">category<i class="fa fa-bars"></i></a>
-		<div class="cat_mega_menu">
-				<div class="cat_left">
-					<h5>Shirts</h5>
-					<div class="cat_menu_line"></div>
-					<ul class="cat_nav">
-						<li><a href="">check shirts</a></li>
-						<li><a href="">denim shirts</a></li>
-						<li><a href="">long sleeve shirts</a></li>
-						<li><a href="">denim shirts</a></li>
-						<li><a href="">long sleeve shirts</a></li>
-					</ul>
-				</div> 
-				<div class="cat_middle">
-					<h5>T Shirts</h5>
-					<div class="cat_menu_line"></div>
-					<ul class="cat_nav">
-						<li><a href="">plain T-shirt</a></li>
-						<li><a href="">printed T-shirt</a></li>
-						<li><a href="">sports T-shirt</a></li>
-						<li><a href="">striped T-shirt</a></li>
-						<li><a href="">V-Neck T-Shirt</a></li>
-					</ul>
-				</div>
-				<div class="cat_middle_right">
-					<h5>trousers fit</h5>
-					<div class="cat_menu_line"></div>
-					<ul class="cat_nav">
-						<li><a href="">flexible waist</a></li>
-						<li><a href="">regular fit</a></li>
-						<li><a href="">slim fit</a></li>
-						<li><a href="">tailored fit</a></li>
-						<li><a href="">tight fit</a></li>
-					</ul>
-				</div>
-				<div class="cat_img">
-					<img src="{% static 'article/images/menu_cat.png'%}" alt="" />
-				</div>
-		</div>
-	</div>
-	<div class="nav_center">
+	
+	<div class="nav_centerfloatcenter ">
 		<nav class="mainmenu">
 			<ul id="nav">
 				<li><a href="index.html">Home</a>
@@ -81,55 +41,7 @@
 			</ul>
 		</nav>
 	</div>
-	<div class="nav_right floatright">
-		<a href="cart.html"><img src="{% static 'article/images/bag.png'%}" alt="Bag" />cart: 2 items</a>
-		<div class="cart_menu">
-			<div class="cart_items">
-				<div class="c_item_img floatleft">
-					<a href="product-detail.html"><img src="{% static 'article/images/c_item1.jpg'%}" alt="" /></a>
-				</div>
-				<div class="c_item_totals floatleft">
-					<div class="c_item_totals_detail floatleft">
-						<a href="product-detail.html"><h5>men’s fashion blue jean coat</h5></a>
-						<span>2 x $ 130.00</span>
-					</div>
-					<div class="close_icon_cart floatleft">
-						<img src="{% static 'article/images/close.png'%}" alt="" />
-					</div>
-				</div>
-			</div>
-			<div class="cart_items">
-				<div class="c_item_img floatleft">
-					<a href="product-detail.html"><img src="{% static 'article/images/c_item2.jpg'%}" alt="" /></a>
-				</div>
-				<div class="c_item_totals floatleft">
-					<div class="c_item_totals_detail floatleft">
-						<a href="product-detail.html"><h5>men’s fashion blue jean coat</h5></a>
-						<span>2 x $ 130.00</span>
-					</div>
-					<div class="close_icon_cart floatleft">
-						<img src="{% static 'article/images/close.png'%}" alt="" />
-					</div>
-				</div>
-			</div>
-			<div class="cart_totals">
-				<div class="c_totals_left floatleft">
-					<p>Free shipping</p>
-				</div>
-				<div class="c_totals_right floatleft">
-					<p>total   $350</p>
-				</div>
-			</div>
-			<div class="cart_view_bottom">
-				<div class="c_totals_left floatleft">
-					<a href="cart.html">View Cart</a>
-				</div>
-				<div class="c_totals_right floatleft">
-					<a href="checkout.html">Check Out</a>
-				</div>
-			</div>
-		</div>
-	</div>
+	
 	
 	
 		<!-- MOBILE ONLY CONTENT -->
