--- a/templates/article/base.html
+++ b/templates/article/base.html
@@ -63,15 +63,15 @@
   </head>
   <body>
     
-	<div class="" style="padding-top: 20px;">
+	<div style="padding-top: 20px;">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-sm-6 col-xs-12">
 					<div class="header_top_right floatleft" >
 						{% if request.user.is_authenticated %}
-							<p style="font-size:45px;"><a href="{% url "account_logout" %}"><i style="font-size:45px;" class="fa-solid fa-right-from-bracket"></i></a>
+							<p style="font-size:30px;"><a href="{% url "account_logout" %}"><i style="font-size:30px;" class="fa-solid fa-right-from-bracket"></i></a>
 						{% else %}
-							<p style="font-size:45px;"><a href="{% url "account_login" %}"><i style="font-size:45px;" class="fa-solid fa-right-to-bracket"></i></a> / <a href="{% url "account_login" %}"><i style="font-size:45px;" class="fa-sharp fa-solid fa-registered"></i></a></p>
+							<p style="font-size:30px;"><a href="{% url "account_login" %}"><i style="font-size:30px;" class="fa-solid fa-right-to-bracket"></i></a> / <a href="{% url "account_login" %}"><i style="font-size:30px;" class="fa-sharp fa-solid fa-registered"></i></a></p>
 						{% endif %}
 					</div>
 				</div>
@@ -80,26 +80,7 @@
 	</div>
 	<div class="header">
 		<div class="container">
-			<div class="row">
-				<div class="col-md-3 col-sm-3 col-xs-12">
-					<div class="header_left floatleft">
-						
-					</div>
-				</div>
-				<div class="col-md-6 col-sm-5 col-xs-12">
-					<div class="header_center">
-						{% comment %} <a href="{% url 'article:home'%}"><img src="#" alt="Site Logo" /></a> {% endcomment %}
-					</div>
-				</div>
-				<div class="col-md-3 col-sm-4 col-xs-12">
-					<div class="header_right floatright">
-						
-						<div class="w_likes">
-							
-						</div>
-					</div>
-				</div>
-			</div>
+			
 		</div>
 	</div>
 
@@ -154,51 +135,10 @@
 		<div class="footer_area">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-3 col-sm-3 col-xs-12">
+				
+					<div class="col-md-3 col-sm-3 col-xs-12 floatright">
 						<div class="single_widget">
-							<h5>information</h5>
-							<div class="wid_line"></div>
-							<ul class="widget_nav">
-								<li><a href="">New Products</a></li>
-								<li><a href="">Top Seller</a></li>
-								<li><a href="">Special</a></li>
-								<li><a href="">Manufactures</a></li>
-								<li><a href="">Suppliers</a></li>
-								<li><a href="">Our Stores</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-3 col-xs-12">
-						<div class="single_widget">
-							<h5>my account</h5>
-							<div class="wid_line"></div>
-							<ul class="widget_nav">
-								<li><a href="">My Account</a></li>
-								<li><a href="">Personal Information</a></li>
-								<li><a href="">Addresses</a></li>
-								<li><a href="">Discounts</a></li>
-								<li><a href="">Order History</a></li>
-								<li><a href="">Your Vouchers</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-3 col-xs-12">
-						<div class="single_widget">
-							<h5>customer service</h5>
-							<div class="wid_line"></div>
-							<ul class="widget_nav">
-								<li><a href="">Help & Contact</a></li>
-								<li><a href="">Shipping & Taxes</a></li>
-								<li><a href="">Return Policy</a></li>
-								<li><a href="">Careers</a></li>
-								<li><a href="">Affliates</a></li>
-								<li><a href="">Legal Notice</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-3 col-xs-12">
-						<div class="single_widget">
-							<h5>contact Info</h5>
+							<h5> تماس با ما</h5>
 							<div class="wid_line"></div>
 							<address>
 								Address : 44 New Design Street,<br>
@@ -213,17 +153,6 @@
 								<li><a class="fa fa-pinterest" href=""></a></li>
 								<li><a class="fa fa-rss" href=""></a></li>
 							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="footer_bottom_area">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12 col-sm-12 col-xs-12">
-						<div class="footer_bottom">
-							<p>Copyright &copy; 2015 <a href="index.html">Men’swaer</a>. All Rights Reserved.</p>
 						</div>
 					</div>
 				</div>
