Add style for home.html

--- a/templates/article/home.html
+++ b/templates/article/home.html
@@ -2,7 +2,12 @@
 {% block article %}
 {% load static %}
 
+<style>
+	.blog_date_in_page span{
+		font-size: 20px;
+	}
 
+</style>
 
 <section class="blog_page_area">
 	<div class="container">
